force-app/main/LoanCalculations/objects/Loan__c/fields/Loan_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Loan_Issue_Date__c</fullName>
    <label>Loan Issue Date</label>
    <type>Date</type>
</CustomField>