force-app/main/LoanCalculations/objects/Loan__c/fields/Loan_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Loan_Term_Months__c</fullName>
    <label>Loan Term (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>